// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit | Brain instance functions #handleMessage if finds string uses it 1`] = `
Object {
  "context": Object {
    "lastMessage": null,
  },
  "response": "fallback.assertion",
}
`;

exports[`Unit | Brain instance functions #handleMessage if function executes it 1`] = `"thebest.message"`;

exports[`Unit | Brain instance functions #handleMessage if no message found uses fallback 1`] = `
Object {
  "context": Object {
    "lastMessage": null,
  },
  "response": "fallback",
}
`;
